Update gbp.conf (thanks jtaylor)

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,13 @@
 [DEFAULT]
-pristine-tar = True
-overlay = True
+cleaner = fakeroot debian/rules clean
+pristine-tar = False
+
+[git-buildpackage]
+export-dir = ../build-area/
+tarball-dir = ../tarballs/
+
+[git-dch]
+id-length = 7
+meta = True
+auto = True
+full = True
