--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Daniel Mizyrycki <daniel@dotcloud.com>
 Uploaders: Paul Tagliamonte <paultag@debian.org>
 Build-Depends: debhelper (>=9), golang, dh-golang (>= 1.1), dh-systemd,
- golang-pty-dev, golang-mux-dev, golang-context-dev
+ golang-pty-dev, golang-mux-dev, golang-context-dev, golang-go.net-dev
 Standards-Version: 3.9.4
 Homepage: http://github.com/dotcloud/docker
 Vcs-Git: git://anonscm.debian.org/collab-maint/docker.io.git
