--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: admin
 Priority: optional
 Maintainer: Daniel Mizyrycki <daniel@dotcloud.com>
 Uploaders: Paul Tagliamonte <paultag@debian.org>
-Build-Depends: debhelper (>=9), golang, dh-golang (>= 1.1), dh-systemd,
- golang-pty-dev, golang-mux-dev, golang-context-dev, golang-go.net-dev
+Build-Depends: debhelper (>=9), golang (>= 2:1.1.2-3~),
+ dh-golang (>= 1.1), dh-systemd, golang-pty-dev, golang-mux-dev,
+ golang-context-dev, golang-go.net-dev
 Standards-Version: 3.9.4
 Homepage: http://github.com/dotcloud/docker
 Vcs-Git: git://anonscm.debian.org/collab-maint/docker.io.git
