--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -2,3 +2,6 @@ docker.io.debhelper.log
 docker.io.substvars
 docker.io/
 files
+docker.io.postinst.debhelper
+docker.io.postrm.debhelper
+docker.io.prerm.debhelper
