--- a/debian/rules
+++ b/debian/rules
@@ -42,4 +42,4 @@ override_dh_installchangelogs:
 
 
 %:
-	dh $@ --buildsystem=golang --with=golang,systemd
+	dh $@ --buildsystem=golang --with=golang,systemd,bash-completion
