Add EvIL and pedantic lintian to our Dockerfile

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -11,6 +11,6 @@ RUN uscan --force-download --verbose --download-current-version
 RUN origtargz --unpack
 
 # tianon is _really_ lazy, and likes a preseeded bash history
-RUN (echo 'uscan --force-download --verbose --download-current-version' && echo 'origtargz --unpack && debuild -us -uc') >> /.bash_history
+RUN (echo 'uscan --force-download --verbose --download-current-version' && echo 'origtargz --unpack && debuild -us -uc --lintian-opts "-EvIL+pedantic"') >> /.bash_history
 
-CMD [ "debuild", "-us", "-uc" ]
+CMD [ "debuild", "-us", "-uc", "--lintian-opts", "-EvIL+pedantic" ]
