Add python3-debian to Dockerfile for wrap-and-sort

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:sid
 MAINTAINER Tianon Gravi <admwiggin@gmail.com>
 
-RUN apt-get update && apt-get install -yq devscripts equivs libcrypt-ssleay-perl lintian --no-install-recommends
+RUN apt-get update && apt-get install -yq devscripts equivs libcrypt-ssleay-perl lintian python3-debian --no-install-recommends
 RUN echo 'deb-src http://http.debian.net/debian sid main' >> /etc/apt/sources.list
 ADD . /usr/src/docker.io/debian
 WORKDIR /usr/src/docker.io
