--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,8 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/docker.io.git;a=su
 Package: docker.io
 Architecture: linux-any
 Depends: adduser,
+         ca-certificates,
+         iptables,
          lxc,
          ${misc:Depends},
          ${shlibs:Depends}
