--- a/debian/control
+++ b/debian/control
@@ -22,11 +22,11 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/docker.io.git;a=su
 Package: docker.io
 Architecture: linux-any
 Depends: adduser,
-         ca-certificates,
          iptables,
          lxc,
          ${misc:Depends},
          ${shlibs:Depends}
+Recommends: ca-certificates
 Built-Using: ${misc:Built-Using}
 Description: Linux container runtime
  Docker complements LXC with a high-level API which operates at the process
