Update Dockerfile preseeding to have an eaiser to modify line

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -22,6 +22,6 @@ RUN uscan --force-download --verbose --download-current-version
 RUN origtargz --unpack
 
 # tianon is _really_ lazy, and likes a preseeded bash history
-RUN (echo 'DEBFULLNAME=... DEBEMAIL=... dch -i' && echo 'uscan --force-download --verbose --download-current-version' && echo 'origtargz --unpack && debuild -us -uc --lintian-opts "-EvIL+pedantic"') >> /.bash_history
+RUN (echo "DEBFULLNAME='' DEBEMAIL='' dch -i" && echo 'uscan --force-download --verbose --download-current-version' && echo 'origtargz --unpack && debuild -us -uc --lintian-opts "-EvIL+pedantic"') >> /.bash_history
 
 CMD [ "debuild", "-us", "-uc", "--lintian-opts", "-EvIL+pedantic" ]
