--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: bash-completion,
                golang-pty-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/dotcloud/docker
-Vcs-Git: git://anonscm.debian.org/collab-maint/docker.io.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/docker.io.git;a=summary
+Vcs-Git: git://anonscm.debian.org/docker/docker.io.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=docker/docker.io.git;a=summary
 
 Package: docker.io
 Architecture: linux-any
