--- a/debian/rules
+++ b/debian/rules
@@ -9,16 +9,16 @@ export DH_GOLANG_INSTALL_ALL := 1
 # temporary build path (see http://golang.org/doc/code.html#GOPATH)
 export GOPATH := $(CURDIR)/obj-$(DEB_BUILD_GNU_TYPE)
 
-# TODO figure out a better place to store this exact hash (in the changelog somehow?)
-export DOCKER_GITCOMMIT := 88df052
-
 # a few helpful variables for deduplication
 INITDIR = /usr/lib/docker.io
 INITPATH = ${INITDIR}/dockerinit
 DOCKER_VERSION = $(shell cat VERSION)
 
+export DOCKER_GITCOMMIT := $(shell awk '/^$(DOCKER_VERSION):/ { print $$2 }' debian/upstream-version-gitcommits)
+
 
 override_dh_auto_build:
+	bash -c '{ [ "$$DOCKER_GITCOMMIT" ]; } || { echo; echo "error: missing DOCKER_GITCOMMIT - see debian/upstream-version-gitcommits"; echo; exit 2; } >&2'
 	DOCKER_INITPATH=${INITPATH} ./hack/make.sh dynbinary
 
 
