Add udev rules from from upstream to ignore docker device-mapper mounts, etc in udisks

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -3,5 +3,6 @@ docker.io.substvars
 docker.io/
 files
 docker.io.postinst.debhelper
+docker.io.preinst.debhelper
 docker.io.postrm.debhelper
 docker.io.prerm.debhelper
