--- a/debian/control
+++ b/debian/control
@@ -12,10 +12,10 @@ Build-Depends: bash-completion,
                golang (>= 2:1.1.2-3~),
                golang-context-dev,
                golang-go.net-dev,
+               golang-gocapability-dev,
                golang-gosqlite-dev,
                golang-mux-dev,
                golang-pty-dev,
-               golang-gocapability-dev,
                libdevmapper-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/dotcloud/docker
@@ -24,7 +24,12 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=docker/docker.io.git;a=summary
 
 Package: docker.io
 Architecture: linux-any
-Depends: adduser, iptables, lxc, ${misc:Depends}, ${shlibs:Depends}
+Depends: adduser,
+         iptables,
+         lxc,
+         ${misc:Depends},
+         ${perl:Depends},
+         ${shlibs:Depends}
 Recommends: aufs-tools, ca-certificates, xz-utils
 Built-Using: ${misc:Built-Using}
 Description: Linux container runtime
