--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -18,12 +18,15 @@ RUN apt-get update && apt-get install -yq vim-nox --no-install-recommends
 # need deb-src for compiling packages
 RUN echo 'deb-src http://http.debian.net/debian sid main' >> /etc/apt/sources.list
 
-# need our debian/ directory to compile _this_ package
-ADD . /usr/src/docker.io/debian
+# start by adding just "debian/control" so we can get mk-build-deps with maximum caching
+ADD control /usr/src/docker.io/debian/control
 WORKDIR /usr/src/docker.io
 
 # get all the build deps of _this_ package in a nice repeatable way
 RUN apt-get update && mk-build-deps -irt'apt-get --no-install-recommends -yq' debian/control
+
+# need our debian/ directory to compile _this_ package
+ADD . /usr/src/docker.io/debian
 
 # go download and unpack our upstream source
 RUN uscan --force-download --verbose --download-current-version
