--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Daniel Mizyrycki <daniel@docker.com>,
            Tianon Gravi <admwiggin@gmail.com>,
            Johan Euphrosine <proppy@google.com>
 Build-Depends: bash-completion,
+               btrfs-tools,
                debhelper (>=9),
                dh-golang (>= 1.1),
                dh-systemd,
