Hide the DOCKER_GITCOMMIT checking line from the build output - if we're being good citizens and building with the proper hash we shouldn't see the monstrosity that checks to make sure that variable is set :)

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,7 @@ export DOCKER_GITCOMMIT := $(shell awk '/^$(DOCKER_VERSION):/ { print $$2 }' deb
 
 
 override_dh_auto_build:
-	bash -c '{ [ "$$DOCKER_GITCOMMIT" ]; } || { echo; echo "error: missing DOCKER_GITCOMMIT - see debian/upstream-version-gitcommits"; echo; exit 2; } >&2'
+	@bash -c '{ [ "$$DOCKER_GITCOMMIT" ]; } || { echo; echo "error: missing DOCKER_GITCOMMIT - see debian/upstream-version-gitcommits"; echo; exit 2; } >&2'
 	DOCKER_INITPATH=${INITPATH} ./hack/make.sh dynbinary
 
 
