--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -1,8 +1,10 @@
-docker.io.debhelper.log
-docker.io.substvars
+*.debhelper.log
+*.postinst.debhelper
+*.postrm.debhelper
+*.preinst.debhelper
+*.prerm.debhelper
+*.substvars
 docker.io/
 files
-docker.io.postinst.debhelper
-docker.io.preinst.debhelper
-docker.io.postrm.debhelper
-docker.io.prerm.debhelper
+tmp/
+vim-syntax-docker/
