--- a/debian/control
+++ b/debian/control
@@ -44,3 +44,12 @@ Description: Linux container runtime
  This package contains the daemon and client. Using docker.io on non-amd64
  hosts is not supported at this time. Please be careful when using it on
  anything besides amd64.
+
+Package: vim-syntax-docker
+Architecture: all
+Depends: ${misc:Depends}, vim
+Recommends: vim-addon-manager
+Suggests: docker.io
+Description: Docker container engine - Vim highlighting syntax files
+ This package provides syntax files for the Vim editor for editing
+ Dockerfiles from the Docker container engine.
