Revert "Add proper 3.8+ kernel dependency"
This reverts commit 62fcca65bfc612cf4badeaf3299a8d5e83fa3d86.

See also https://lists.debian.org/debian-backports/2014/02/msg00029.html

--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Depends: adduser,
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
-Recommends: aufs-tools, ca-certificates, linux (>= 3.8~), xz-utils
+Recommends: aufs-tools, ca-certificates, xz-utils
 Built-Using: ${misc:Built-Using}
 Description: Linux container runtime
  Docker complements LXC with a high-level API which operates at the process
