--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Depends: adduser,
          ${misc:Depends},
          ${perl:Depends},
          ${shlibs:Depends}
-Recommends: aufs-tools, ca-certificates, xz-utils
+Recommends: aufs-tools, ca-certificates, git, xz-utils
 Built-Using: ${misc:Built-Using}
 Description: Linux container runtime
  Docker complements kernel namespacing with a high-level API which operates at
