--- a/debian/control
+++ b/debian/control
@@ -25,12 +25,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=docker/docker.io.git;a=summary
 
 Package: docker.io
 Architecture: linux-any
-Depends: adduser,
-         iptables,
-         lxc,
-         ${misc:Depends},
-         ${perl:Depends},
-         ${shlibs:Depends}
+Depends: adduser, iptables, ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
 Recommends: aufs-tools, ca-certificates, git, xz-utils
 Built-Using: ${misc:Built-Using}
 Description: Linux container runtime
