--- a/debian/rules
+++ b/debian/rules
@@ -17,6 +17,9 @@ DOCKER_VERSION = $(shell cat VERSION)
 export DOCKER_GITCOMMIT := $(shell awk '/^$(DOCKER_VERSION):/ { print $$2 }' debian/upstream-version-gitcommits)
 export DOCKER_INITPATH := ${INITPATH}
 
+# good old Ubuntu needs AppArmor
+export DOCKER_BUILDTAGS := apparmor
+
 
 override_dh_auto_build:
 	@bash -c '{ [ "$$DOCKER_GITCOMMIT" ]; } || { echo; echo "error: missing DOCKER_GITCOMMIT - see debian/upstream-version-gitcommits"; echo; exit 2; } >&2'
