Add docker-maint to Uploaders

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: docker.io
 Section: admin
 Priority: optional
 Maintainer: Paul Tagliamonte <paultag@debian.org>
-Uploaders: Daniel Mizyrycki <daniel@docker.com>,
+Uploaders: Docker Packaging Team <docker-maint@lists.alioth.debian.org>,
+           Daniel Mizyrycki <daniel@docker.com>,
            Tianon Gravi <admwiggin@gmail.com>,
            Johan Euphrosine <proppy@google.com>
 Build-Depends: bash-completion,
